#156 - word wrapping in navbar fix

--- a/searchapp/src/main/client/src/app/magazines/components/navbar/navbar.component.scss
+++ b/searchapp/src/main/client/src/app/magazines/components/navbar/navbar.component.scss
@@ -3,11 +3,18 @@
 @import "../../../../sass/app-mixins";
 
 .mat-toolbar {
+  height: auto;
+  min-height: var(--mat-toolbar-standard-height);
+  
   a {
     color: var(--app-color-lightnes);
   }
   
   .app-left {
+    white-space: normal;
+    padding-top: 8px;
+    padding-bottom: 8px;
+
     .app-logo {
       font-weight: 400;
       font-size: 24px;
